# nsu-cybersecurity

./: .gitignore  README.md
lab-01-sha-3-and-shake/: pyproject.toml
lab-01-sha-3-and-shake/dev_suite/: __init__.py  __main__.py  test_sha_3_and_shake.py
lab-01-sha-3-and-shake/dev_suite/resources/hashes/: SHA3-224-SUMS  SHA3-256-SUMS  SHA3-384-SUMS  SHA3-512-SUMS  SHAKE-128-SUMS  SHAKE-256-SUMS
lab-01-sha-3-and-shake/dev_suite/resources/messages/: mit-license.txt  war-and-peace-volume-i.txt
lab-01-sha-3-and-shake/keccak/: __init__.py  _impl.py
lab-02-kuznyechik/: pyproject.toml
lab-02-kuznyechik/kuznyechik/: __init__.py  types_extensions.py
lab-02-kuznyechik/kuznyechik/constants/: __init__.py
lab-02-kuznyechik/kuznyechik/constants/resources/: pi.csv
lab-02-kuznyechik/tests/: test_cipher.py  test_key_generation.py  test_permutations.py  test_with_io.py
lab-02-kuznyechik/tests/resources/: cipher_text.txt  message.txt
lab-03-rsa/: pyproject.toml  tests.py
lab-03-rsa/rsa/: __init__.py
lab-03-rsa/rsa/primes/: __init__.py  bitarray.py  sieve.py
