[tool.poetry]
name = "lab-03-rsa"
version = "1.0.0"
description = "A simple RSA public-key cryptosystem implementation."
authors = ["Dmitriy Vashurin <kapkekes@yandex.ru>"]
readme = "README.md"
packages = [{include = "rsa"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
mypy = "^1.7.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "Q"]
line-length = 120

[tool.ruff.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = false

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests.py"]
